# bpmn-python

./: .dockerignore  Dockerfile  README.md  TODO-strong-typing.md  pyproject.toml
.github/workflows/: poetry-action.yaml
bpmn_python/: bpmn_diagram_exception.py  bpmn_diagram_export.py  bpmn_diagram_import.py  bpmn_diagram_layouter.py  bpmn_diagram_metrics.py  bpmn_diagram_rep.py  bpmn_diagram_visualizer.py  bpmn_import_utils.py  bpmn_process_csv_export.py  bpmn_process_csv_import.py  bpmn_python_consts.py  diagram_layout_metrics.py  grid_cell_class.py  node_creator.py
bpmn_python/graph/classes/: __init__.py  base_element.py  base_element_type.py  condition_expression.py  data_object.py  flow_element.py  flow_element_type.py  flow_node.py  flow_node_type.py  lane.py  lane_set.py  lane_set_type.py  lane_type.py  message_flow.py  message_flow_type.py  participant.py  participant_type.py  sequence_flow.py  sequence_flow_type.py
bpmn_python/graph/classes/activities/: __init__.py  activity.py  activity_type.py  manual_task.py  (+6 more)
tests/csv_export/: csv_export_test.py
tests/csv_import/: csv_import_test.py
tests/layouter/: layouter_test.py
tests/metrics/: layout_metrics_test.py  test_bpmn_diagram_metrics.py
tests/xml_import_export/: bpmn_editor_import_test.py  camunda_complex_test.py  camunda_simple_test.py  default_conditional_flow_test.py  lanes_test.py  manually_generated_complex_diagram.py  manually_generated_complex_diagram_test.py  manually_generated_simple_diagram.py  manually_generated_simple_diagram_test.py  signavio_complex_test.py  signavio_simple_test.py
(+36 files in other folders)
